--- a/mybook/ModelingData.ipynb
+++ b/mybook/ModelingData.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.26.1)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n"
+      "Requirement already satisfied: numpy in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.26.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4   5  Iris-setosa           1.4          0.2           5.0          3.6"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
