--- a/mybook/ModelingData.ipynb
+++ b/mybook/ModelingData.ipynb
@@ -20,7 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.Requirement already satisfied: pandas in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (1.26.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\intan\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +155,7 @@
        "4   5  Iris-setosa           1.4          0.2           5.0          3.6"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
