--- a/mybook/ModelingData.ipynb
+++ b/mybook/ModelingData.ipynb
@@ -144,6 +144,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementasi pada data yang sudah dihapus outliernya"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
