--- a/mybook/ModelingData.ipynb
+++ b/mybook/ModelingData.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Naive Bayes**  \n",
+    "# **Naive Bayes Classifier**\n",
     "Naïve Bayes adalah algoritma klasifikasi berbasis teorema Bayes, yang berasumsi bahwa setiap fitur dalam dataset saling independen satu sama lain  \n",
     "\n",
     "## **1. Teori Dasar Naïve Bayes**\n",
@@ -74,14 +74,14 @@
     "\n",
     "## **4. Kelebihan dan kekurangan :**\n",
     "### **Kelebihan :**\n",
-    "1. Cepat & Efisien → Dapat bekerja dengan dataset besar dengan waktu komputasi cepat.\n",
-    "2. Mudah diimplementasikan → Algoritma sederhana dan membutuhkan sedikit data untuk pelatihan.\n",
-    "3. Performa bagus untuk klasifikasi teks → Banyak digunakan dalam analisis sentimen dan deteksi spam.\n",
+    "- Sederhana dan mudah diimplementasikan.\n",
+    "- Cepat dan efisien untuk dataset besar.\n",
+    "- Cocok untuk data dengan banyak fitur.\n",
     "\n",
     "### **Kekurangan :**\n",
-    "1. Asumsi independensi fitur → Tidak realistis dalam banyak kasus, karena fitur sering memiliki korelasi.\n",
-    "2. Menghasilkan probabilitas nol → Jika suatu fitur tidak pernah muncul dalam kelas tertentu, probabilitasnya menjadi 0, sehingga harus digunakan teknik Laplace Smoothing.\n",
-    "3. Kurang fleksibel dibanding model yang lebih kompleks → Model seperti Decision Tree atau Neural Network bisa menangkap hubungan antar fitur lebih baik.\n",
+    "- Asumsi independensi fitur seringkali tidak realistis.\n",
+    "- Performa menurun jika fitur saling bergantung.\n",
+    "- Memerlukan penanganan khusus untuk data dengan probabilitas nol.\n",
     "\n",
     "## **5. Contoh penggunaan Naive Bayes :**\n",
     "1. Deteksi Email Spam → Mengklasifikasikan email sebagai spam atau tidak.\n",
@@ -218,8 +218,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
