--- a/mybook/UTS.ipynb
+++ b/mybook/UTS.ipynb
@@ -5,6 +5,8 @@
    "id": "1bcfef9e",
    "metadata": {},
    "source": [
+    "## Tahap Analisa\n",
+    "\n",
     "Penanganan Nilai Hilang (Missing Values)\n",
     "Beberapa kolom dalam dataset mengandung nilai kosong (NaN). Langkah yang dilakukan:\n",
     "\n",
