--- a/mybook/UTS.ipynb
+++ b/mybook/UTS.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8f1d3324",
+   "metadata": {},
+   "source": [
+    "# Ujian Tengah Semester\n",
+    "# Data Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1bcfef9e",
    "metadata": {},
    "source": [
