--- a/mybook/UTS.ipynb
+++ b/mybook/UTS.ipynb
@@ -6,7 +6,45 @@
    "metadata": {},
    "source": [
     "# Ujian Tengah Semester\n",
-    "# Data Understanding"
+    "## Tahap Analisa\n",
+    "data diambil dari : https://archive.ics.uci.edu/dataset/878/cirrhosis+patient+survival+prediction+dataset-1\n",
+    "\n",
+    "### Pemahaman Data (Data Understanding)\n",
+    "Tahap ini bertujuan untuk memahami struktur, isi, dan karakteristik dari dataset sebelum dilakukan preprocessing dan pemodelan.\n",
+    "\n",
+    "Memahami data dalam penambangan data (data mining) adalah proses menganalisis dan mengeksplorasi data untuk menemukan pola, hubungan, dan informasi yang berguna. Penambangan data melibatkan berbagai teknik dan metode untuk mengolah data besar (big data) dan menghasilkan wawasan yang dapat digunakan untuk pengambilan keputusan yang lebih baik.\n",
+    "\n",
+    "*Beberapa kegiatan  dalam memahami diantaranya adalah :*  \n",
+    "\n",
+    "1. Pengumpulan data  \n",
+    "2. Sampling : mengambil data sebagian untuk menarik kesimpulan.  \n",
+    "3. Profiling data : mengamati data, tipe data, kategori dan tingkatannya, memprofiling data bahwa data tersebut ordinal, mencatat apakah data tersebut berkualitas.    \n",
+    "4. Korelasi dan Asosiasi : menganalisis hubungan antar kolom.  \n",
+    "5. Eksplorasi data : Menggunakan teknik visualisasi seperti diagram batang, scatter plot, atau histogram untuk memahami distribusi data.  \n",
+    "6. Identifikasi masalah data : Menemukan data yang tidak valid, duplikat, atau tidak konsisten.  \n",
+    "7. Validasi data : sumber datanya jelas.  \n",
+    "\n",
+    "*Pengumpulan Data*  \n",
+    "*   Mengumpulkan data dari berbagai sumber, seperti database, file CSV, API, atau sensor.  \n",
+    "*   Memastikan bahwa semua data yang relevan telah dikumpulkan sesuai tujuan analisis.  \n",
+    "\n",
+    "*Visualisasi Data*  \n",
+    "*  Histogram : untuk melihat distribusi data numerik  \n",
+    "*  Box plot : untuk mmendeteksi outlierts  \n",
+    "*  Scatter plot : hubungan antara 2 variabel  \n",
+    "*  Bar chart/Pie chart.  \n",
+    "\n",
+    "*identifikasi masalah data :*  \n",
+    "1. missing values : menemukan data yang hilang atau tidak lengkap  \n",
+    "2. outliers : mendeteksi nilai nilai ekstrem yang mungkin melakukan kesalahan atau anomali  \n",
+    "3. duplikasi data : mengidentifikasi baris atau entri yang duplikat  \n",
+    "4. inkonsistensi : memeriksa apakah ada ketidaksesuaian dalam format atau nilai data.  \n",
+    "\n",
+    "*manfaat data understanding :*  \n",
+    "1. meningkatkan kualitas data  \n",
+    "2. menghemat waktu dan biaya : menghindari kesalahan analisis yang disebabkan oleh data buruk  \n",
+    "3. mendukung pengambilan keputusan : memberikan wawasan awal yang berguna untuk merumuskan strategi analisis  \n",
+    "4. mengurangi resiko kesalahan model."
    ]
   },
   {
@@ -14,9 +52,7 @@
    "id": "1bcfef9e",
    "metadata": {},
    "source": [
-    "## Tahap Analisa\n",
-    "\n",
-    "data diambil dari : https://archive.ics.uci.edu/dataset/878/cirrhosis+patient+survival+prediction+dataset-1\n"
+    "### Pra-pemrosesan Data (Preprocessing)"
    ]
   },
   {
@@ -213,7 +249,7 @@
    "id": "53487b4e",
    "metadata": {},
    "source": [
-    "## LOF untuk mendeteksi outlier"
+    "### LOF untuk mendeteksi outlier"
    ]
   },
   {
@@ -370,17 +406,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2c2c13",
+   "id": "f7d0e45d",
    "metadata": {},
    "source": [
-    "## Data Modelling\n",
-    "### Mengklasifikasi data menggunakan naive bayes"
+    "### KNN untuk mendeteteksi outlier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "43958a1c",
+   "execution_count": null,
+   "id": "ad9fac9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# 1. Load data\n",
+    "df = pd.read_csv('cirrhosis.csv')\n",
+    "\n",
+    "# 2. Pilih fitur numerik\n",
+    "numeric_cols = [\n",
+    "    \"N_Days\", \"Age\", \"Bilirubin\", \"Cholesterol\", \"Albumin\",\n",
+    "    \"Copper\", \"Alk_Phos\", \"SGOT\", \"Tryglicerides\",\n",
+    "    \"Platelets\", \"Prothrombin\", \"Stage\"\n",
+    "]\n",
+    "X = df[numeric_cols].copy()\n",
+    "\n",
+    "# 3. Imputasi nilai NaN\n",
+    "X.fillna(X.mean(), inplace=True)\n",
+    "\n",
+    "# 4. Standarisasi\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# 5. Hitung rata-rata jarak ke k tetangga terdekat\n",
+    "k = 20\n",
+    "nbrs = NearestNeighbors(n_neighbors=k)\n",
+    "nbrs.fit(X_scaled)\n",
+    "distances, _ = nbrs.kneighbors(X_scaled)\n",
+    "\n",
+    "# 6. Skor outlier: rata-rata jarak ke tetangga terdekat\n",
+    "outlier_scores = distances.mean(axis=1)\n",
+    "df['KNN_score'] = outlier_scores\n",
+    "\n",
+    "# 7. Tentukan threshold (misal 5% tertinggi dianggap outlier)\n",
+    "threshold = np.percentile(outlier_scores, 95)\n",
+    "df['is_outlier'] = df['KNN_score'] > threshold\n",
+    "\n",
+    "# 8. Tampilkan outlier\n",
+    "outliers = df[df['is_outlier']].sort_values(by='KNN_score', ascending=False)\n",
+    "print(outliers[['KNN_score', 'is_outlier'] + numeric_cols])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018574dc",
+   "metadata": {},
+   "source": [
+    "### Data Modelling\n",
+    "#### Mengklasifikasi data menggunakan naive bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4f95feb0",
    "metadata": {},
    "outputs": [
     {
@@ -455,6 +548,14 @@
     "))\n",
     "print(\"\\nClassification Report:\")\n",
     "print(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41831c07",
+   "metadata": {},
+   "source": [
+    "### Evaluasi"
    ]
   }
  ],
