--- a/mybook/UTS.ipynb
+++ b/mybook/UTS.ipynb
@@ -111,7 +111,9 @@
    "id": "91b61d10",
    "metadata": {},
    "source": [
-    "### Visualisasi"
+    "### Visualisasi\n",
+    "\n",
+    "Visualisasi ini memberikan gambaran menyeluruh terhadap karakteristik pasien sirosis."
    ]
   },
   {
@@ -339,7 +341,9 @@
    "id": "53487b4e",
    "metadata": {},
    "source": [
-    "### LOF untuk mendeteksi outlier"
+    "### LOF untuk mendeteksi outlier\n",
+    "\n",
+    "Mendeteksi outlier atau anomali pada data pasien sirosis menggunakan algoritma Local Outlier Factor (LOF). LOF mengukur seberapa jauh kepadatan suatu data berbeda dari tetangganya, sehingga efektif untuk mengenali pasien dengan kondisi yang tidak umum atau berisiko tinggi."
    ]
   },
   {
@@ -499,7 +503,9 @@
    "id": "f7d0e45d",
    "metadata": {},
    "source": [
-    "### KNN untuk mendeteteksi outlier"
+    "### K-NN untuk mendeteksi outlier\n",
+    "\n",
+    "Mengklasifikasi data pasien sirosis menggunakan algoritma K-Nearest Neighbors (K-NN). Model ini menentukan status pasien berdasarkan kedekatan data dengan tetangga terdekatnya, dan memberikan prediksi dengan akurasi yang kompetitif."
    ]
   },
   {
@@ -557,7 +563,9 @@
    "metadata": {},
    "source": [
     "### Data Modelling\n",
-    "#### Mengklasifikasi data menggunakan naive bayes"
+    "#### Mengklasifikasi data menggunakan naive bayes\n",
+    "\n",
+    "Naive Bayes adalah algoritma klasifikasi berbasis probabilitas, yang didasari oleh Teorema Bayes dengan asumsi “naif” bahwa fitur-fitur saling independen."
    ]
   },
   {
