--- a/mybook/UTS.ipynb
+++ b/mybook/UTS.ipynb
@@ -52,7 +52,9 @@
    "id": "1bcfef9e",
    "metadata": {},
    "source": [
-    "### Pra-pemrosesan Data (Preprocessing)"
+    "### Pra-pemrosesan Data (Preprocessing)\n",
+    "\n",
+    "Tahapan ini bertujuan untuk membersihkan dan menyiapkan data agar bisa digunakan oleh model klasifikasi secara optimal."
    ]
   },
   {
