--- a/mybook/clustering.ipynb
+++ b/mybook/clustering.ipynb
@@ -1405,7 +1405,7 @@
    "id": "d90c47bb",
    "metadata": {},
    "source": [
-    "# Fuzzy C-Means"
+    "# **Fuzzy C-Means**"
    ]
   },
   {
@@ -1413,20 +1413,57 @@
    "id": "734d9885",
    "metadata": {},
    "source": [
-    "## Konsep dasar\n",
+    "**Konsep dasar**  \n",
+    "Fuzzy C-Means adalah cara untuk mengelompokkan data ke dalam beberapa grup (cluster), tapi setiap data bisa masuk ke lebih dari satu grup. Artinya, satu data bisa masuk ke lebih dari satu cluster, dengan nilai keanggotaan antara 0 dan 1, dan jumlah total keanggotaan untuk satu data adalah 1.  \n",
     "\n",
-    "Fuzzy C-Means adalah cara untuk mengelompokkan data ke dalam beberapa grup (cluster), tapi setiap data bisa masuk ke lebih dari satu grup. Artinya, satu data bisa masuk ke lebih dari satu cluster, dengan nilai keanggotaan antara 0 dan 1, dan jumlah total keanggotaan untuk satu data adalah 1."
+    "**Tujuan utama FCM :**  \n",
+    "Mencari pusat kluster sedemikian rupa sehingga setiap data memiliki derajat keanggotaan terhadap tiap kluster.  \n",
+    "\n",
+    "**Algoritma FCM :**  \n",
+    "1. Inisialisasi  \n",
+    "    * Pilih jumlah kluster c  \n",
+    "    * Pilih nilai fuzzifier m   \n",
+    "    * Inisialisasi matriks keanggotaan awal U^((0) ) secara acak, dengan syarat:  \n",
+    "    $$\n",
+    "    \\sum_{i=1}^{c} u_{ik} = 1, \\quad \\forall k = 1, 2, \\dots, n\n",
+    "        $$\n",
+    "2. Hitung pusat kluster V  \n",
+    "    $$\n",
+    "    v_i = \\frac{\\sum_{k=1}^{n} u_{ik}^m \\, x_k}{\\sum_{k=1}^{n} u_{ik}^m}\n",
+    "    $$\n",
+    "3. Update derajat keanggotaan U  \n",
+    "    $$\n",
+    "    u_{ik} = \\frac{1}{\\sum_{j=1}^{c} \\left( \\frac{\\|x_k - v_i\\|}{\\|x_k - v_j\\|} \\right)^{\\frac{2}{m - 1}}}\n",
+    "    $$\n",
+    "4. Cek konvergensi\n",
+    "    * Hitung selisih antara matriks keanggotaan sebelum dan sesudah update.  \n",
+    "    * Jika perubahan < toleransi (ϵ), hentikan proses.  \n",
+    "5. Iterasi ulang  \n",
+    "    * Kembali ke langkah 2 sampai algoritma konvergen.  \n",
+    "6. Tentukan kluster akhir  \n",
+    "    * Untuk setiap data x_k, tentukan kluster utamanya berdasarkan nilai u_ik tertinggi.  \n",
+    "\n",
+    "**Kelebihan FCM :**  \n",
+    "* Lebih fleksibel daripada K-Means karena mengizinkan keanggotaan parsial.  \n",
+    "* Cocok untuk data yang tidak jelas batasnya antar kluster.  \n",
+    "* Memberikan informasi ketidakpastian tentang keanggotaan kluster.  \n",
+    "\n",
+    "**Kekurangan FCM :**  \n",
+    "* Sensitif terhadap inisialisasi awal.  \n",
+    "* Perlu menentukan jumlah kluster c secara manual.  \n",
+    "* Komputasi agak lambat untuk dataset besar.  \n",
+    "* Hasil bisa berbeda-beda setiap kali running karena inisialisasi acak.  \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebcfc74e",
+   "id": "0799b3a3",
    "metadata": {},
    "source": [
-    "### Langkah Algoritma\n",
-    "Menghitung cluster (C)   \n",
-    "tentukan nilai (M) secara umum 2    \n",
-    "matriks keanggotaan (U) "
+    "### **Implementasi Fuzzy C-Means (FCM) dengan 4 Fitur dan 3 Cluster**"
    ]
   },
   {
