--- a/mybook/clustering.ipynb
+++ b/mybook/clustering.ipynb
@@ -4189,7 +4189,13 @@
       "Data ke-82: [0.6642, 0.1098, 0.226]\n",
       "Data ke-83: [0.821, 0.0537, 0.1253]\n",
       "Data ke-84: [0.6807, 0.1727, 0.1466]\n",
-      "Data ke-85: [0.6683, 0.1324, 0.1993]\n",
+      "Data ke-85: [0.6683, 0.1324, 0.1993]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Data ke-86: [0.7239, 0.1058, 0.1702]\n",
       "Data ke-87: [0.5368, 0.2435, 0.2197]\n",
       "Data ke-88: [0.7489, 0.106, 0.1451]\n",
