--- a/mybook/clustering.ipynb
+++ b/mybook/clustering.ipynb
@@ -8216,6 +8216,20 @@
     "\n",
     "## 3. Menentukan Threshold: 145 cm\n",
     "\n",
+    "cocokkan labelnya:  \n",
+    "120–140 → Cucumis sativus  \n",
+    "150–160 → Cucumis metuliferus  \n",
+    "170–190 → Cucumis melo  \n",
+    "\n",
+    "Ambil Titik Tengah di Antara Data Berbeda Kelas  \n",
+    "Threshold yang masuk akal adalah **nilai di tengah antara dua data bertetangga yang berasal dari spesies berbeda.  \n",
+    "\n",
+    "Contoh:  \n",
+    "140 (sativus) → 150 (metuliferus)  \n",
+    "→ Threshold = (140 + 150) / 2 = 145.0  \n",
+    "160 (metuliferus) → 170 (melo)  \n",
+    "→ Threshold = (160 + 170) / 2 = 165.0  \n",
+    "\n",
     "- **Group Kiri (≤ 145 cm)** → 5 data: semua Cucumis sativus  \n",
     "- **Group Kanan (> 145 cm)** → 10 data: 5 metuliferus, 5 melo\n",
     "\n",
